--- a/Frontend/public/assets/css/titanium.css
+++ b/Frontend/public/assets/css/titanium.css
@@ -357,10 +357,14 @@ html.dark .urgent-badge {
 
     .dynamic-card .card-title {
         font-size: 0.76rem !important;
-        white-space: nowrap;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        /* Limite a 2 righe */
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
         overflow: hidden;
-        text-overflow: ellipsis;
-        display: block;
+        white-space: normal;
+        line-height: 1.2;
     }
 
     .dynamic-card .card-text {
